Update Hero section subtitle with new content about P&L ownership and APAC scaling

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
             <p class="eyebrow">Bold GTM Leadership · Cloud · AI</p>
             <h1 style="font-size: clamp(1.84rem, 3.04vw, 2.8rem);">Enterprise Sales Leader | Cloud Growth Architect | Trusted C-Suite Partner</h1>
             <p class="subtitle">
-              Senior sales leader with 25+ years delivering double-digit growth for Oracle,
-              IBM, Novell & Aptech by aligning business strategy with modern cloud outcomes.
+              Senior cloud and enterprise sales leader with full-spectrum P&L ownership and a distinguished record of scaling businesses across APAC. Delivered multi-fold revenue growth, led market-defining cloud transformations, and earned top-tier global recognition for execution excellence, leadership, and customer outcomes
             </p>
             <div class="hero-ctas">
               <a class="btn primary" href="mailto:shabeer_mk@outlook.com">Email Shabeer</a>
