--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="logo">SM</div>
+      <div class="logo">
+        <img src="Logo1.png" alt="Logo" />
+      </div>
       <nav class="main-nav">
         <a href="#hero">Hero</a>
         <a href="#about">About</a>
