--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="site-header">
       <div class="logo">
-        <img src="Logo1.png" alt="Logo" />
+        <img src="logo1.png" alt="Logo" />
       </div>
       <nav class="main-nav">
         <a href="#hero">Hero</a>
