Add Rayenna Energy CRM project card with image under Proud Builds

--- a/index.html
+++ b/index.html
@@ -391,6 +391,32 @@
         </article>
         <article class="project-card">
           <div>
+            <h3>Rayenna Energy CRM – Custom Enterprise CRM Platform</h3>
+            <img
+              src="Rayenna_CRM.jpeg"
+              alt="Rayenna Energy custom CRM platform"
+              class="project-thumb"
+            />
+            <p>
+              As an Independent, Honorary Director to Rayenna Energy, I supported the company’s early-stage setup across business planning, sales organisation design, HR policies, product positioning, and operational frameworks.
+            </p>
+            <p>
+              A key deliverable was the end-to-end conception, architecture, development, hosting, and handover of a fully customised, enterprise-grade CRM platform, purpose-built for a solar EPC business.
+            </p>
+            <h4 style="margin-top: 1.25rem; margin-bottom: 0.75rem;">Highlights</h4>
+            <ul>
+              <li>Designed Rayenna’s sales organisation and end-to-end sales processes</li>
+              <li>Built a custom CRM covering Sales, Operations, Finance, and Management dashboards</li>
+              <li>Developed original workflows aligned to real-world lead, project, and execution cycles</li>
+            </ul>
+            <p>
+              Delivered a scalable, production-ready internal platform that gives Rayenna Energy a unified, real-time view of pipeline, project execution, and financial performance.
+            </p>
+          </div>
+          <span class="tag">Enterprise CRM Build</span>
+        </article>
+        <article class="project-card">
+          <div>
             <h3>Fabrication of INSAT Hardware on Deckel Milling Machines</h3>
             <p class="meta">Vikram Sarabhai Space Centre · Thumba</p>
             <p>
