--- a/index.html
+++ b/index.html
@@ -392,11 +392,18 @@
         <article class="project-card">
           <div>
             <h3>Rayenna Energy CRM – Custom Enterprise CRM Platform</h3>
-            <img
-              src="Rayenna_CRM.jpeg"
-              alt="Rayenna Energy custom CRM platform"
-              class="project-thumb"
-            />
+            <div class="project-images">
+              <img
+                src="Rayenna_CRM.jpeg"
+                alt="Rayenna Energy custom CRM platform"
+                class="project-image"
+              />
+              <img
+                src="CRM_arch.png"
+                alt="Rayenna Energy CRM architecture"
+                class="project-image"
+              />
+            </div>
             <p>
               As an Independent, Honorary Director to Rayenna Energy, I supported the company’s early-stage setup across business planning, sales organisation design, HR policies, product positioning, and operational frameworks.
             </p>
