Use Rayenna_arch.jpg instead of CRM_arch.png in Rayenna CRM project

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 class="project-image"
               />
               <img
-                src="CRM_arch.png"
+                src="Rayenna_arch.jpg"
                 alt="Rayenna Energy CRM architecture"
                 class="project-image"
               />
