Add centered footer logo (logo2.png) above copyright, scaled to 50%

--- a/index.html
+++ b/index.html
@@ -492,6 +492,9 @@
     </main>
 
     <footer class="site-footer">
+      <div class="footer-logo">
+        <img src="logo2.png" alt="Shabeer personal logo" />
+      </div>
       <p>© <span id="year"></span> Shabeer Mohamed. Built bold & colorful.</p>
     </footer>
 
