--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             <h3>Rayenna Energy CRM – Custom Enterprise CRM Platform</h3>
             <div class="project-images">
               <img
-                src="Rayenna_CRM.jpeg"
+                src="Rayenna_Screenshot.jpg"
                 alt="Rayenna Energy custom CRM platform"
                 class="project-image"
               />
