Add hyperlink to Abra Al Arab in Board & Strategic Advisory Roles

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <ul style="margin-bottom: 1.5rem;">
               <li><strong><a href="https://rayenna.energy/" target="_blank" rel="noreferrer">Rayenna Energy</a></strong> - A renewable energy solutions company driving sustainability through solar and clean-energy initiatives.</li>
               <li><strong><a href="https://aroosalmohit.com/" target="_blank" rel="noreferrer">Aroos Al Mohit</a></strong> - A diversified trading and logistics enterprise serving regional and international markets.</li>
-              <li><strong>Abra Al Arab</strong> - An energy and commodities trading firm focused on crude oil and refined petroleum products across global corridors.</li>
+              <li><strong><a href="https://abraalarab.com/" target="_blank" rel="noreferrer">Abra Al Arab</a></strong> - An energy and commodities trading firm focused on crude oil and refined petroleum products across global corridors.</li>
             </ul>
             <p style="margin-bottom: 1rem;">
               Across these engagements, I actively guide leadership teams across the entire business lifecycle, including:
